fixed layout on mobile

--- a/bustracker/static/css/main.less
+++ b/bustracker/static/css/main.less
@@ -116,6 +116,11 @@ div#header span#clock
     color: #FFFFFF;
 }
 
+div#header button
+{
+	font-size: 0.5em;
+}
+
 /* LIST */
 
 table.list
@@ -463,12 +468,16 @@ span.separator
 
 	div.dialog
 	{
+		position: absolute;
 		left: 0;
 		top: 0;
-		width: 100%;
+		width: 90%;
 		min-height: 100%;
 		border: 0;
 		margin: 0;
+		overflow: scroll;
+		-webkit-overflow-scrolling: touch;
+		z-index: 1000;
 	}
 	
 	div.dialog label, div.dialog .small
